<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Management.FixInfoActivity">
<!---->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:text="@string/tvUserName"/>

    <EditText
        android:id="@+id/etUserAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintBottom_toBottomOf="@id/tvUserName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvInputUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/tvInputUserPassword"/>

    <EditText
        android:id="@+id/etInputUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvInputUserPassword"
        app:layout_constraintBottom_toBottomOf="@+id/tvInputUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvInputNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvInputUserPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvInputUserPassword"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/tvInputNewPassword"/>

    <EditText
        android:id="@+id/etInputNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvInputNewPassword"
        app:layout_constraintBottom_toBottomOf="@+id/tvInputNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvInputNewPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvInputNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvInputNewPassword"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/tvInputNewPasswordAgain"/>

    <EditText
        android:id="@+id/etInputNewPasswordAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvInputNewPasswordAgain"
        app:layout_constraintBottom_toBottomOf="@+id/tvInputNewPasswordAgain"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btCommit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputNewPasswordAgain"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onUpdateClick"
        android:text="@string/btCommit"/>

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btCommit"
        app:layout_constraintTop_toTopOf="@id/btCommit"
        android:layout_marginEnd="10dp"
        android:onClick="onCancelClick"
        android:text="@string/btCancel"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btCancel"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffff0000"
            android:textSize="14sp" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>